@@ -1,38 +1,0 @@
-#ifndef _KVI_TARGZFILE_H_
-#define _KVI_TARGZFILE_H_
-//
-//   File : kvi_targzfile.h
-//   Creation date : Wen Dec 26 2005 00:24:04 by Uzhva Alexey
-//
-//   This file is part of the KVirc irc client distribution
-//   Copyright (C) 2001 Szymon Stefanek (pragma at kvirc dot net)
-//
-//   This program is FREE software. You can redistribute it and/or
-//   modify it under the terms of the GNU General Public License
-//   as published by the Free Software Foundation; either version 2
-//   of the License, or (at your opinion) any later version.
-//
-//   This program is distributed in the HOPE that it will be USEFUL,
-//   but WITHOUT ANY WARRANTY; without even the implied warranty of
-//   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
-//   See the GNU General Public License for more details.
-//
-//   You should have received a copy of the GNU General Public License
-//   along with this program. If not, write to the Free Software Foundation,
-//   Inc. ,59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.
-//
-#include "kvi_settings.h"
-#include "kvi_heapobject.h"
-#include "kvi_string.h"
-#include "kvi_list.h"
-#include "kvi_inttypes.h"
-
-class KVILIB_API KviGzPacker 
-{
-public:
-	KviGzPacker(){};
-	~KviGzPacker(){};
-}
-
-
-#endif //_KVI_TARGZFILE_H_
