@@ -1,3 +1,8 @@
+20 Jan 2007
+   [Pragma]
+   - Another quick fix (for config values not saved correctly)
+   - Started the implementation of multiple identities.
+
 19 Jan 2007
    [Pragma]
    - Added the fixes for a couple of bugs introduced with the yesterday commit.
